# RobPrak

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/driver_cpp/lib/driver_cpp/: actuator_action_server  actuator_driver_node
install/driver_cpp/share/driver_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/driver_cpp/share/driver_cpp/cmake/: driver_cppConfig-version.cmake  driver_cppConfig.cmake
install/driver_cpp/share/driver_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/hand_eye_calib_py/lib/hand_eye_calib_py/: hand_eye_calib_node
install/hand_eye_calib_py/share/hand_eye_calib_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/master_py/share/master_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/planner_py/lib/planner_py/: state_node  test_planner_node
install/planner_py/share/planner_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/planner_py/share/planner_py/launch/: planner.launch.py
install/prak_msgs/include/prak_msgs/prak_msgs/msg/: joint_state.h  (+12 more)
install/prak_msgs/share/prak_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/prak_msgs/share/prak_msgs/action/: ActuatorCommand.action  ActuatorCommand.idl  ActuatorCommand.json
install/prak_msgs/share/prak_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_prak_msgs__rosidl_generator_pyExport-noconfig.cmake  export_prak_msgs__rosidl_generator_pyExport.cmake  export_prak_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  prak_msgsConfig-version.cmake  prak_msgsConfig.cmake  prak_msgs__rosidl_typesupport_cExport-noconfig.cmake  prak_msgs__rosidl_typesupport_cExport.cmake  prak_msgs__rosidl_typesupport_cppExport.cmake  prak_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  prak_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/prak_msgs/share/prak_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/prak_msgs/share/prak_msgs/msg/: ActuatorRequest.idl  ActuatorRequest.json  ActuatorRequest.msg  JointState.idl  JointState.json  JointState.msg  JointStateStamped.idl  JointStateStamped.json  JointStateStamped.msg  RobotState.idl  RobotState.json  RobotState.msg
log/: latest_build
src/driver_cpp/: CMakeLists.txt  package.xml
src/driver_cpp/config/: obstacles.yaml  static_tf.yaml
src/driver_cpp/launch/: driver.launch.py
src/driver_cpp/src/: action_driver.cpp  actuator_driver_node.cpp  obstacle_safety_node.cpp  static_tf_from_yaml.cpp
src/hand_eye_calib_py/: setup.cfg  setup.py
src/hand_eye_calib_py/calibration/: 16.01.2026.txt
src/hand_eye_calib_py/config/: hand_eye_calib.yaml
src/hand_eye_calib_py/hand_eye_calib_py/: hand_eye_calib_node.py
src/hand_eye_calib_py/launch/: hand_eye_calib.launch.py
src/launch/: hand_eye_calib.launch.py
src/master_py/: package.xml  setup.cfg  setup.py
src/planner_py/: setup.cfg  setup.py
src/planner_py/planner_py/: test_planner_node.py
src/prak_msgs/: CMakeLists.txt
src/prak_msgs/action/: ActuatorCommand.action
src/prak_msgs/msg/: ActuatorRequest.msg  JointStateStamped.msg
src/test_moveit_cpp/: CMakeLists.txt  package.xml
src/test_moveit_cpp/src/: hello_moveit.cpp  obstacle.cpp  spiral_moveit.cpp
(+62 files in other folders)
